Fixed scrollbar for mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -361,3 +361,9 @@ img {
 	  /*border-radius: 5px;*/
 	}
 }
+
+@media only screen and (min-width: 768px) {
+	pre code {
+    	white-space: pre;
+	}
+}
